--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
   <head>
     <title>Overtime</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body class="container">
-    <%= yield %>
+    <div class="row main-row">
+  		<div class="col-md-12">
+        <%= render 'shared/nav' %>
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
