--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,8 +3,8 @@
 </div>
 
 <ul class="nav nav-tabs custom-nav">
-  <li><%= link_to 'Home', root_path %></li>
-  <li><%= link_to 'Time Entries', posts_path %></li>
+  <li class="<%= active?(root_path) %>"><%= link_to 'Home', root_path %></li>
+  <li class="<%= active?(posts_path) %>"><%= link_to 'Time Entries', posts_path %></li>
   <li class="dropdown pull-right">
      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
