--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,5 +2,5 @@
   <td><%= post.id %></td>
   <td><%= post.date.strftime("%m/%d/%Y")  %></td>
   <td><%= truncate(post.rationale, length: 40) %></td>
-  <td><%= post.user.last_name %></td>
+  <td><%= post.user.full_name %></td>
 </tr>
