--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,4 +3,5 @@
   <td><%= post.date.strftime("%m/%d/%Y")  %></td>
   <td><%= truncate(post.rationale, length: 40) %></td>
   <td><%= post.user.full_name %></td>
+  <td><%= link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" %></td>
 </tr>
