--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,7 +8,7 @@
   <li class="dropdown pull-right">
      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
-      <li><%= link_to 'Edit Details', edit_user_registration_path %></li>
+      <li><%= link_to 'Edit Account', edit_user_registration_path %></li>
       <li><a href="#">Create User</a></li>
       <li><a href="#">Remove User</a></li>
       <li class="divider"></li>
