--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,11 @@
 <%= form_for @post, class: "form-horizontal" do |f| %>
+
+  <% if @post.errors.any? %>
+    <% @post.errors.full_messages.each do |error| %>
+      <%= js add_gritter(error, title: "Overtime Notification", sticky: false, image: :error) %>
+    <% end %>
+  <% end %>
+
   <div class="form-group">
     <%= f.label :date, class: "col-sm-1 control-label" %>
     <%= f.date_field :date, class: "form-control" %>
@@ -6,7 +13,7 @@
 
   <div class="form-group">
     <%= f.label :rationale, class: "col-sm-1 control-label" %>
-    <%= f.text_area :rationale, class: "form-control" %>
+    <%= f.text_area :rationale, class: "form-control", rows: 5 %>
   </div>
 
   <%= f.submit 'Save', class: "btn btn-primary btn-block" %>
