--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "posts.scss";
+@import "gritter";
 
 body {
   background-color: #eee;
@@ -12,6 +13,7 @@ body {
 
 .main-row {
   background-color: white;
+  padding-bottom: 10px;
 }
 
 .jumbotron {
