--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,6 +3,7 @@
   <td><%= post.date.strftime("%m/%d/%Y")  %></td>
   <td><%= truncate(post.rationale, length: 40) %></td>
   <td><%= post.user.full_name %></td>
+  <td><%= post.status %></td>
   <td><%= link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" %></td>
   <td><%= link_to 'Delete', post_path(post), method: :delete, id: "delete_post_#{post.id}_from_index", data: { confirm: 'Are you sure?'} %></td>
 </tr>
