--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,5 @@
       </div>
     </div>
   </body>
-  <%= js add_gritter(flash[:notice], title: "Overtime Notification", sticky: false, image: :success) %>
+  <%= render 'shared/alerts' %>
 </html>
