added hours request and show model

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,7 @@
     <tr>
       <th>#</th>
       <th>Request Date</th>
+      <th>Hours</th>
       <th>Rationale</th>
       <th>Employee</th>
       <th></th>
