--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <td><%= post.id %></td>
   <td><%= post.date.strftime("%m/%d/%Y")  %></td>
+  <td><%= post.overtime_request %></td>
   <td><%= truncate(post.rationale, length: 40) %></td>
   <td><%= post.user.full_name %></td>
   <td><%= status_label post.status %></td>
