added view for employee homepage

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 @import "gritter";
 @import "bourbon";
 @import "admin_homepage";
+@import "employee_homepage";
 
 body {
   // background-color: #eee;
