--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,11 +1,14 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-5 column jumbotron employee-blocks">
-
+    <div class="col-md-12 column jumbotron employee-blocks">
+      <h3>Pending Your Confirmation</h3>
+      <%= render partial: 'pending_audit_confirmations', locals: { pending_audit_confirmations: @pending_audit_confirmations} %>
     </div>
 
     <div class="col-md-5 column jumbotron employee-blocks">
 
     </div>
+
+
   </div>
 </div>
