--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -11,11 +11,11 @@
     <li class="dropdown pull-right">
        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Settings<strong class="caret"></strong></a>
       <ul class="dropdown-menu">
+        <li><a href="#">Hi, <%= current_user.first_name %></a></li>
+        <li><a href="#">Date: <%= Date.today %></a></li>
         <% if current_user.try(:type) == 'AdminUser' %>
           <li><%= link_to 'ADMIN', admin_root_path %></li>
         <% end %>
-        <li><a href="#">Create User</a></li>
-        <li><a href="#">Remove User</a></li>
         <li class="divider"></li>
         <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
       </ul>
