implemented nil gaurd for callback

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -14,7 +14,7 @@
         <li><a href="#">Hi, <%= current_user.first_name %></a></li>
         <li><a href="#">Date: <%= Date.today %></a></li>
         <% if current_user.try(:type) == 'AdminUser' %>
-          <li><%= link_to 'ADMIN', admin_root_path %></li>
+          <li><%= link_to 'Admin Dashboard', admin_root_path %></li>
         <% end %>
         <li class="divider"></li>
         <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
