--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,8 +4,8 @@
 
 <% if current_user %>
   <ul class="nav nav-tabs custom-nav">
-    <li class="<%= active?(root_path) %>"><%= link_to 'Home', root_path %></li>
-    <li class="<%= active?(posts_path) %>"><%= link_to 'Time Entries', posts_path %></li>
+    <li class="<%= active?(root_path) %>"><%= link_to '', root_path, class: 'glyphicon glyphicon-home' %></li>
+    <li class="<%= active?(posts_path) %>"><%= link_to 'Entries', posts_path %></li>
     <%= render 'shared/audit_log_tab' if policy(AuditLog).index? %>
     <li class="<%= active?(new_post_path) %>"><%= link_to 'Request Overtime', new_post_path, id: "new_post_from_nav" %></li>
     <li class="dropdown pull-right">
