--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -5,17 +5,16 @@
 <% if current_user %>
   <ul class="nav nav-tabs custom-nav">
     <li class="<%= active?(root_path) %>"><%= link_to '', root_path, class: 'glyphicon glyphicon-home' %></li>
-    <li class="<%= active?(posts_path) %>"><%= link_to 'Entries', posts_path %></li>
-    <%= render 'shared/audit_log_tab' if policy(AuditLog).index? %>
-    <li class="<%= active?(new_post_path) %>"><%= link_to 'Request Overtime', new_post_path, id: "new_post_from_nav" %></li>
+    <%= render 'shared/audit_log_tab' if admin? %>
+    <%= render 'shared/employee_nav_items' if employee? %>
+
+
     <li class="dropdown pull-right">
        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Settings<strong class="caret"></strong></a>
       <ul class="dropdown-menu">
         <li><a href="#">Hi, <%= current_user.first_name %></a></li>
         <li><a href="#">Date: <%= Date.today %></a></li>
-        <% if current_user.try(:type) == 'AdminUser' %>
-          <li><%= link_to 'Admin Dashboard', admin_root_path %></li>
-        <% end %>
+        <%= render 'shared/admin_dropdown' if admin? %>
         <li class="divider"></li>
         <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
       </ul>
