final touches on app

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,3 +22,11 @@ body {
 .jumbotron {
   margin-top: 10px;
 }
+
+.login-page-row {
+  margin-top: 50px;
+}
+
+.login-header {
+  margin-bottom: 50px;
+}
